--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>网传小官网</title>
-<link rel="stylesheet" type="text/css" href="assets/style.css" />
-<link rel="stylesheet" type="text/css" href="assets/swiper-3.4.0.min.css" />
+<title>网传官网</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="swiper-3.4.0.min.css" />
 </head>
 <body>
 <div class="content">
    <div class="header">
-     <img src="img/logo.png">
+     <img src="logo.png">
         <div class="quickLink">
             <a href="#">教师进入</a>
             <a href="#">教师进入</a>
@@ -34,8 +33,8 @@
 
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class=" banner swiper-slide"></div>
-        <div class=" banner1 swiper-slide"></div>
+        <div class=" banner swiper-slide">  <img src="banner1.jpg"></div>
+        <div class=" banner swiper-slide"> <img src="banner2.jpg"></div>
         <div class="swiper-slide">Slide 3</div>
     </div>
        <div class="swiper-button-prev"></div>
@@ -48,13 +47,13 @@
               <div class="cols" id="cols1-1"></div>
               <div class="cols" id="cols1-2">
                  <ul>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
-        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
+        <li><span class="channel">[栏目]</span>&nbsp;&nbsp;&nbsp;<a href="#">标题标题标题标题</a><span class="datetime">2017/3/31</span></li>
                  </ul>
               </div>
               <div class="cols" id="cols1-3">
@@ -70,8 +69,8 @@
 
 </body>
 
-<script src="assets/jquery-3.1.1.min.js"></script>
-<script src="assets/swiper.jquery.min.js"></script>
+<script src="jquery-3.1.1.min.js"></script>
+<script src="swiper.jquery.min.js"></script>
 <script>        
   var mySlide = new Swiper ('.swiper-container', {
     loop: true,
